# usc-interaction-software.ros

./: CMakeLists.txt  bandit.cpp  bandit_calib  bandit_calib.cpp  bandit_calib_version1  bandit_calib_version1.cpp  bandit_mover.cpp  bandit_node.cpp  buildinfo  fake_bandit.cpp  manifest.xml  stack.xml
ARToolKitPlus_wrapper/: CMakeLists.txt  Makefile  artkp.cmake  mainpage.dox  manifest.xml  mods.patch
OIT/: stack.xml
artoolkitplus/: CMakeLists.txt  Makefile  artkp.cmake  artoolkitplus.cpp  manifest.xml  mods.patch
artoolkitplus_wrapper/: CMakeLists.txt  mainpage.dox  manifest.xml
bandit/: buildinfo  stack.xml
bandit/bandit_driver/: Bandit_Calibration_File.yaml  CMakeLists.txt  manifest.xml  pid_config.yaml
bandit/bandit_driver/config/2_SUNDANCE_KID/: 2_calib_08_17_2010.yaml  2_calib_08_18_2010.yaml
bandit/bandit_driver/config/3_CLYDE_BARROW/: 3_calib_09_01_2011.yaml
bandit/bandit_driver/config/5_BELLE_STARR/: pid_config.yaml
bandit/bandit_driver/launch/: bandit.launch
bandit/bandit_driver/src/: bandit_node.cpp  bandit_node_edit.cpp
bandit_actionlib/: CMakeLists.txt
bandit_calibration/: CMakeLists.txt  bandit_calib.cpp
bandit_calibration_prototype/: mainpage.dox
bandit_driver/: CMakeLists.txt  bandit_calib.cpp  bandit_calib_version1.cpp  bandit_demo_gestures.cpp  bandit_mover.cpp  bandit_node.cpp  bandit_node_edit.cpp  fake_bandit.cpp  manifest.xml  pid_config.yaml
bandit_driver/config/2_SUNDANCE_KID/: 2_calib_08_18_2010.yaml
bandit_driver/config/5_BELLE_STARR/: Bandit_Calibration_File.yaml
bandit_driver/include/bandit_node/: bandit_node.h
bandit_driver/launch/: bandit.launch
bandit_driver/src/: bandit_demo_gestures.cpp  bandit_node.cpp
bandit_driver_prototype/: manifest.xml
bandit_ik/: CMakeLists.txt  manifest.xml
bandit_ik/include/bandit_ik/: bandit_arm_ik.h  bandit_arm_ik_nl_jr_solver.h  bandit_arm_ik_solver.h  bandit_arm_kinematics.h  bandit_arm_kinematics_constants.h  bandit_arm_kinematics_utils.h
bandit_ik/launch/: bandit_ik_larm.launch  bandit_ik_rarm.launch  bandit_point_larm.launch  bandit_point_rarm.launch
bandit_ik/src/: bandit_arm_ik.cpp  bandit_arm_ik_nl_jr_solver.cpp  bandit_arm_ik_solver.cpp  bandit_arm_kinematics.cpp  cmd_ik.cpp  goto_cart.cpp
bandit_mover/: CMakeLists.txt  bandit_mover.cpp  manifest.xml
bandit_mover2/: CMakeLists.txt  bandit_mover2.cpp  mainpage.dox  manifest.xml
bandit_urdf/: CMakeLists.txt  bandit.launch  bandit_shirt.launch  controller.launch
bandit_urdf/defs/: bandit_defs.xacro  bandit_defs.xml  bandit_shirt_defs.xacro  head.gazebo.xacro  head.transmission.xacro  head.xacro  head.xacro.bk  materials.xacro  pioneer2dx.xacro  pioneerbase.xacro  shirt_materials.xacro  shoulder.xacro  shoulder_shirt.xacro  stage.xacro  torso.gazebo.xacro  torso.xacro  torso_shirt.xacro
bandit_urdf/defs/gazebo/: bandit_shirt_defs.xacro  screws.xacro  torso.xacro
bandit_urdf/launch/: upload_bandit.launch  upload_bandit_shirt.launch  upload_pioneer2dx.launch
bandit_urdf/meshes/bandit_mesh/: background.stl  bicep_cover_left_small.stl  bicep_cover_left_smaller.stl  bicep_cover_left_smallest.stl  bicep_cover_right_small.stl  bicep_cover_right_smallest.stl  body_small.stl  body_smallest.stl  bottom_lip.STL  bottom_lip_small.stl  bottom_lip_smallest.stl  camera_board.stl  camera_board_1.STL  camera_board_small.stl  camera_board_smaller.stl  camera_board_smallest.stl  center_eye.stl  elbow_cover_left.stl  elbow_cover_left_small.stl  elbow_cover_left_smallest.stl  elbow_cover_right.stl  elbow_cover_right_small.stl  elbow_cover_right_smaller.stl  elbow_cover_right_smallest.stl  eyebrow_left.STL  eyebrow_left_small.stl  eyebrow_left_smaller.stl  eyebrow_left_smallest.stl  eyebrow_right.STL  eyebrow_right_small.stl  eyebrow_right_smaller.stl  eyebrow_right_smallest.stl  eyebrows_left.stl  eyebrows_right.stl  forearm_cover_left_small.stl  forearm_cover_left_smaller.stl  forearm_cover_left_smallest.stl  forearm_cover_right_small.stl  forearm_cover_right_smaller.stl  forearm_cover_right_smallest.stl  (+46 more)
bandit_urdf/src/: parser.cc
bandit_urdf/urdf/: bandit_shirt_defs.urdf.xacro
deixis/: stack.xml
next_best_view/ros_nbv/nbv_utilities/: CMakeLists.txt  mainpage.dox  manifest.xml
next_best_view/ros_nbv/nbv_utilities/include/nbv_utilities/: arm_pose_goal.h  drive_to_init_pos.h  get_cloud_broadcast.h  kinect_grab_one_pc_srv.h  load_pcd.h  point_cloud.h  point_cloud_srv.h
next_best_view/ros_nbv/nbv_utilities/launch/: kinect.launch  pr2_laser_node.launch  pr2_right_arm_navigation.launch
next_best_view/ros_nbv/nbv_utilities/src/: .ignore  arm_pose_goal.cpp  drive_to_init_pos.cpp  get_cloud_broadcast.cpp  kinect_grab_one_pc_srv.cpp  load_pcd.cpp  point_cloud.cpp  point_cloud_srv.cpp
next_best_view/ros_nbv/nbv_utilities/srv/: ArmPoseGoal.srv  FindTable.srv  SendCloud.srv
phidget/: CMakeLists.txt  Makefile  manifest.xml  phidget.cc
phidget/launch/: multi_phidget_example.launch  phidget.launch
phidget/msg/: DigIn.msg  DigOut.msg
quickdev/quickdev_scripts/: CMakeLists.txt  mainpage.dox  manifest.xml
quickdev/quickdev_scripts/bash/: apply_patches.bash  create_pkg  create_pkg.sh  quickdev-create-lib  quickdev-create-pkg  quickdev-set-ros-env-vars.bash  quickdev-set-ros-ip.bash  quickdev-set-ros-parallel-jobs.bash  set_ros_env_vars.bash  set_ros_ip.bash  set_ros_parallel_jobs.bash
quickdev/quickdev_scripts/python/: msg_gen.py
quickdev/quickdev_scripts/python/electric/: msg_gen.py
sandbox/matlab/test_matlab_no_ros/: CMakeLists.txt  cmake.mk  manifest.xml
sandbox/matlab/test_matlab_no_ros/src/: CMakeLists.txt  test.cpp  yprime.cpp  yprime_with_mat.cpp
sbl/oculesics/oculesic_controllers/src/: CMakeLists.txt  oculesic_controller.cpp  oculesic_policy.cpp  point3d.cpp  probabilistic_oculesic_policy.cpp  random_generator.cpp  random_oculesic_policy.cpp  test_mpc.cpp
sbl_experimental/oculesics/oculesics_controllers/nodes/: CMakeLists.txt  random_oculesics_controller.cpp
sbl_experimental/oculesics/src/: CMakeLists.txt  oculesics_core.cpp  probabilistic_oculesics_controller.cpp  test_pid.cpp  test_strain_pid.cpp
(+1445 files in other folders)
